# pixelated-avatar-generator

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pixelated-avatar-generator.cabal  stack.yaml
app/: Main.hs
src/Graphics/Avatars/: Pixelated.hs
test/Graphics/Avatars/: PixelatedSpec.hs  helloAvatar.tiff
