name:                pixelated-avatar-generator
version:             0.1.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/ExcaliburZero/pixelated-avatar-generator
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Avatars.Pixelated
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels >= 3.2.7
                     , bytestring >= 0.10.6.0
                     , pureMD5 >= 2.1.0.0
                     , split >= 0.2.3.0
  ghc-options:         -Wall
  default-language:    Haskell2010

executable pixelated-avatar-generator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , pixelated-avatar-generator
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pixelated-avatar-generator
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExcaliburZero/pixelated-avatar-generator
